@@ -1,18 +1,0 @@
-#!/usr/bin/perl
-use Exobrain;
-
-# PODNAME: geo-personallog
-# ABSTRACT: Log our own check-ins to a personal log (such as idonethis).
-# VERSION
-
-my $exobrain = Exobrain->new;
-
-$exobrain->watch_loop(
-    class  => 'Measurement::Geo',
-    filter => sub { $_->is_me },
-    then   => sub {
-        $exobrain->intent("PersonalLog",
-            message => $_->summary
-        );
-    },
-);
